<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WithXML">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/tvNom"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/edNom"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/tvPrenom"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/etPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/edPrenom"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"

            android:text="@string/tvAge"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/etAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/edAge"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:text="@string/tvCompetence"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/etDC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/edCompetence"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <TextView
            android:layout_width="140sp"
            android:layout_height="wrap_content"

            android:text="@string/tvTel"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/etTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/edTel"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/bValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textButon"
        android:layout_marginTop="75sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"/>

</LinearLayout>